Git added a list to push code

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae minus beatae ratione culpa at fugit quo asperiores. Voluptas nesciunt, distinctio accusantium repellat qui nisi culpa asperiores tempore inventore explicabo incidunt!</p>
     
 </div> 
+<div>
+    <h3>How to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful message"</li>
+        <li>git push"</li>
+    </ul>
+</div>
 </body>
 </html>
